--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/react": "^6.5.12",
@@ -34,8 +35,12 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
