--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-svg": "^15.1.9",
     "storybook": "^6.5.12",
     "styled-components": "^5.3.5"
   },
