--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/react-calendar": "^3.5.3",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.12",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "postcss": "^8.4.16",
     "react": "18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "18.2.0",
     "react-svg": "^15.1.9",
     "storybook": "^6.5.12",
