--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "@types/react-calendar": "^3.5.3",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.12",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
     "react-dom": "18.2.0",
+    "react-slideshow-image": "^4.0.5",
     "react-svg": "^15.1.9",
     "storybook": "^6.5.12",
     "styled-components": "^5.3.5"
