--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "@types/numeral": "^2.0.2",
     "@types/react-calendar": "^3.5.3",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.12",
     "date-fns": "^2.29.3",
     "next": "12.3.1",
+    "numeral": "^2.0.6",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
